fix(search-bar): story title + select disabled + button align

--- a/packages/stencil/components/select/src/components/osds-select/osds-select.scss
+++ b/packages/stencil/components/select/src/components/osds-select/osds-select.scss
@@ -16,12 +16,6 @@
   cursor: pointer;
   text-align: left;
 
-  &[disabled] {
-    .select-trigger {
-      opacity: 0.5;
-    }
-  }
-
   .select-trigger {
     align-items: center;
     border-style: solid;
@@ -63,7 +57,6 @@
   @include osds-select-on-selected-host() {
     opacity: .5;
     cursor: not-allowed;
-    pointer-events: none;
   }
 }
 
